--- a/css/kunu-studio.webflow.css
+++ b/css/kunu-studio.webflow.css
@@ -428,7 +428,7 @@ figcaption {
 }
 
 .layout5_background {
-  background-image: url('../images/');
+  background-image: url('../images/Screenshot-2024-09-21-at-18.50.16.jpg');
   background-position: 0 0;
   background-repeat: repeat;
   background-size: cover;
