--- a/css/kunu-studio.webflow.css
+++ b/css/kunu-studio.webflow.css
@@ -1,13 +1,13 @@
 :root {
-  --primary_pink: #e8c1ae;
-  --black: #24292e47;
-  --border: #e1e4e8;
   --background-whitesmoke: #fafbfc;
-  --background-grey: var(--black);
   --primary_dark: #331705;
+  --border: #e1e4e8;
+  --background-grey: var(--black);
+  --primary_pink: #e8c1ae;
   --secondary_pink: #e7af94;
   --blue: #0366d6;
   --button-hover: #1158c7;
+  --black: #24292e47;
 }
 
 .w-checkbox {
@@ -72,8 +72,8 @@
 }
 
 body {
-  background-color: var(--primary_pink);
-  color: var(--black);
+  background-color: var(--background-whitesmoke);
+  color: var(--primary_dark);
   font-family: Inter, sans-serif;
   font-size: 1rem;
   line-height: 1.5;
@@ -82,7 +82,7 @@ body {
 h1 {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: Droid Serif, serif;
+  font-family: PT Serif, serif;
   font-size: 3rem;
   font-weight: 700;
   line-height: 1.25;
@@ -91,7 +91,7 @@ h1 {
 h2 {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: Merriweather, serif;
+  font-family: PT Serif, serif;
   font-size: 2.5rem;
   font-weight: 700;
   line-height: 1.25;
@@ -100,6 +100,7 @@ h2 {
 h3 {
   margin-top: 0;
   margin-bottom: 0;
+  font-family: PT Serif, serif;
   font-size: 2rem;
   font-weight: 700;
   line-height: 1.25;
@@ -408,10 +409,18 @@ figcaption {
   padding-right: 4rem;
 }
 
-.layout3_image, .layout2_image {
+.layout3_image {
   object-fit: cover;
   border-radius: .25rem;
   width: 100%;
+  min-height: 19.5rem;
+}
+
+.layout2_image {
+  object-fit: contain;
+  border-radius: .25rem;
+  width: 100%;
+  height: 30rem;
   min-height: 19.5rem;
 }
 
@@ -442,7 +451,7 @@ figcaption {
 .button-secondary {
   border: 1px solid var(--border);
   background-color: var(--background-whitesmoke);
-  color: var(--black);
+  color: var(--primary_dark);
   text-align: center;
   border-radius: .25rem;
   justify-content: center;
@@ -1252,7 +1261,7 @@ figcaption {
   grid-column-gap: 2rem;
   grid-row-gap: 3rem;
   grid-template-rows: auto;
-  grid-template-columns: 1fr max-content;
+  grid-template-columns: auto max-content;
   grid-auto-columns: 1fr;
   display: grid;
 }
@@ -1276,6 +1285,7 @@ figcaption {
 }
 
 .footer1_link {
+  color: var(--primary_dark);
   margin-top: 1rem;
   font-size: .875rem;
   font-weight: 500;
@@ -1287,12 +1297,14 @@ figcaption {
 }
 
 .footer1_bottom {
+  flex-flow: row;
   grid-template-rows: auto;
   grid-template-columns: max-content;
   grid-auto-columns: max-content;
   grid-auto-flow: column;
-  justify-content: space-between;
-  place-items: center start;
+  justify-content: flex-start;
+  place-items: flex-end start;
+  width: 80%;
   display: flex;
 }
 
@@ -1975,6 +1987,7 @@ figcaption {
 }
 
 .blog4_content-wrapper {
+  text-align: left;
   margin-bottom: 1rem;
 }
 
@@ -2418,8 +2431,11 @@ figcaption {
   border: 1px solid var(--border);
   background-color: var(--background-whitesmoke);
   border-radius: .25rem;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-flow: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  min-width: 350px;
+  height: 325px;
   padding: 1.5rem;
   transition: transform .2s ease-out;
   display: flex;
@@ -2548,7 +2564,16 @@ figcaption {
 }
 
 .blog4_item {
-  flex-direction: column;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  text-align: left;
+  flex-flow: wrap;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-columns: 1fr;
+  grid-auto-flow: row;
+  justify-content: flex-start;
+  align-items: flex-start;
   height: 100%;
   display: flex;
 }
@@ -2675,12 +2700,12 @@ figcaption {
 }
 
 .nav3_dropdown_list {
-  background-color: #0000;
+  background-color: var(--background-whitesmoke);
 }
 
 .nav3_dropdown_list.w--open {
   border: 1px solid var(--border);
-  background-color: #0000;
+  background-color: var(--background-whitesmoke);
   border-radius: .25rem;
   overflow: hidden;
 }
@@ -2741,7 +2766,7 @@ figcaption {
 }
 
 .nav3_logo {
-  max-height: 1.5rem;
+  max-height: 3rem;
 }
 
 .nav3_container {
@@ -2755,6 +2780,7 @@ figcaption {
 }
 
 .nav3_dropdown {
+  background-color: var(--background-whitesmoke);
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -2765,18 +2791,25 @@ figcaption {
 }
 
 .nav3_link {
+  color: var(--primary_dark);
+  text-transform: uppercase;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: .75rem 1rem;
   font-size: .875rem;
-  font-weight: 600;
+  font-weight: 700;
+  text-decoration: none;
   transition: color .2s ease-out;
   display: flex;
 }
 
 .nav3_link:hover {
   color: var(--blue);
+}
+
+.nav3_link:visited {
+  color: var(--primary_dark);
 }
 
 .nav3_component {
@@ -2856,7 +2889,7 @@ figcaption {
   grid-column-gap: 1rem;
   grid-row-gap: 2rem;
   grid-template-rows: auto;
-  grid-template-columns: auto;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-auto-columns: auto;
   grid-auto-flow: column;
   justify-content: stretch;
@@ -2911,6 +2944,7 @@ figcaption {
 }
 
 .social_icon {
+  color: var(--primary_dark);
   width: 1.25rem;
   height: 1.25rem;
 }
@@ -2955,15 +2989,21 @@ figcaption {
 }
 
 .blog4_title-link {
+  color: var(--primary_dark);
   margin-top: 1rem;
   margin-bottom: .5rem;
+  text-decoration: none;
+}
+
+.section_ctabox {
+  color: var(--background-whitesmoke);
 }
 
 .layout13_component {
   grid-column-gap: 4rem;
   grid-row-gap: 2rem;
   border: 1px solid var(--border);
-  background-color: var(--background-whitesmoke);
+  background-color: var(--primary_dark);
   border-radius: .25rem;
   grid-template-rows: auto;
   grid-template-columns: 1fr max-content;
@@ -2973,7 +3013,31 @@ figcaption {
   display: grid;
 }
 
-.contact2_social, .footer1_social, .footer2_social, .footer3_social, .footer4_social {
+.contact2_social {
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  grid-template-rows: auto;
+  grid-template-columns: max-content;
+  grid-auto-columns: max-content;
+  grid-auto-flow: column;
+  align-items: center;
+  display: grid;
+}
+
+.footer1_social {
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  grid-template-rows: auto;
+  grid-template-columns: max-content;
+  grid-auto-columns: max-content;
+  grid-auto-flow: column;
+  align-items: center;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  display: grid;
+}
+
+.footer2_social, .footer3_social, .footer4_social {
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
   grid-template-rows: auto;
@@ -3688,6 +3752,7 @@ figcaption {
 
 .heading-style-h1.text-style-allcaps {
   font-family: PT Serif, serif;
+  font-size: 3rem;
 }
 
 .heading-style-h1.text-style-allcaps.text-color-white {
@@ -3725,6 +3790,97 @@ figcaption {
   justify-content: center;
   align-items: center;
   height: 75vh;
+}
+
+.section_hero-secondary {
+  padding-top: 4rem;
+}
+
+.pamoku_grid {
+  grid-column-gap: 3rem;
+  grid-row-gap: 2rem;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-columns: 1fr;
+  place-items: start stretch;
+  display: grid;
+}
+
+.pamoku_grid.two_rows {
+  grid-template-columns: 1fr 1fr;
+}
+
+.stiyle_image {
+  object-fit: contain;
+  object-position: 47% 50%;
+  width: 100%;
+  height: 20rem;
+  transition: transform .2s ease-out;
+}
+
+.stiyle_image:hover {
+  transform: scale(1.15);
+}
+
+.tvark_grid {
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  grid-template-rows: .25fr auto auto auto auto;
+  grid-template-columns: .25fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-auto-columns: 1fr;
+  display: grid;
+}
+
+.layout2_lokacja {
+  max-width: 32rem;
+}
+
+.div-block {
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-columns: 1fr;
+  display: grid;
+}
+
+.social_icon_contact {
+  width: 5rem;
+  height: 5rem;
+}
+
+.padding_section_custom {
+  padding-top: 5rem;
+}
+
+.section_kaip_rasti {
+  padding-top: 4rem;
+}
+
+.image_wrapper_footer {
+  width: 250px;
+}
+
+.div-block-2 {
+  flex-flow: wrap;
+  display: flex;
+}
+
+.button-wrapper {
+  padding-top: 20px;
+}
+
+.link-block, .link-block-2 {
+  color: var(--primary_dark);
+  text-decoration: none;
+}
+
+.image_privacios {
+  mix-blend-mode: luminosity;
+  object-fit: cover;
+  border-radius: .25rem;
+  width: 100%;
+  min-height: 19.5rem;
 }
 
 @media screen and (max-width: 991px) {
@@ -4100,9 +4256,9 @@ figcaption {
   .nav3_dropdown_toggle {
     justify-content: flex-start;
     margin-left: 0;
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-    padding-left: 2.5rem;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 0;
   }
 
   .nav3_dropdown {
@@ -4110,7 +4266,7 @@ figcaption {
   }
 
   .nav3_link {
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
@@ -4816,8 +4972,8 @@ figcaption {
   }
 
   .nav3_dropdown_toggle {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
+    padding-top: 0;
+    padding-bottom: 0;
     padding-left: 1.25rem;
   }
 
@@ -5064,6 +5220,22 @@ figcaption {
   .hero_bg {
     height: 32rem;
   }
+
+  .section_hero-secondary {
+    padding-top: 0;
+  }
+
+  .pamoku_grid {
+    grid-template-columns: 1fr;
+  }
+
+  .social_icon_contact {
+    color: var(--primary_dark);
+  }
+
+  .section_kaip_rasti {
+    padding-top: 0;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -5080,6 +5252,10 @@ figcaption {
     grid-template-columns: auto;
     grid-auto-columns: max-content;
     grid-auto-flow: row;
+  }
+
+  .button {
+    display: flex;
   }
 
   .layout8_image {
@@ -5316,9 +5492,13 @@ figcaption {
     padding-top: 0;
     padding-bottom: 0;
   }
+
+  .stiyle_image {
+    height: 16rem;
+  }
 }
 
-#w-node-_35eac5d9-e004-89ae-801b-a55d5194c66e-c1325447 {
+#w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a287-eb21a26f {
   justify-self: start;
 }
 
@@ -5416,6 +5596,10 @@ figcaption {
   justify-self: start;
 }
 
+#w-node-_903c86d5-9307-91aa-7c8f-fe2687ef6ec9-1e07c883, #w-node-_8407d0c5-2dbc-b1b1-fa5f-f315c5b8d803-1e07c883 {
+  align-self: start;
+}
+
 @media screen and (max-width: 991px) {
   #w-node-_122d1b5b-8c49-9fef-3ba8-e745cc0a01e5-c132544b {
     grid-row: span 2 / span 2;
@@ -5439,7 +5623,7 @@ figcaption {
 }
 
 @media screen and (max-width: 767px) {
-  #w-node-_35eac5d9-e004-89ae-801b-a55d5194c67d-c1325447 {
+  #w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a296-eb21a26f {
     order: -9999;
   }
 
