--- a/css/kunu-studio-a077d9.css
+++ b/css/kunu-studio-a077d9.css
@@ -20837,7 +20837,7 @@ figure {
   place-self: start center;
 }
 
-#w-node-d46d82c1-40f2-314f-f684-5074ad84380c-ad843808, #Name.w-node-d46d82c1-40f2-314f-f684-5074ad84380e-ad843808, #w-node-d46d82c1-40f2-314f-f684-5074ad843810-ad843808, #Email-6.w-node-d46d82c1-40f2-314f-f684-5074ad843812-ad843808, #w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808, #Message-2.w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808, #w-node-_42e47e49-494b-4774-2667-2c2c829786c2-a9bfea53 {
+#w-node-d46d82c1-40f2-314f-f684-5074ad84380c-ad843808, #Name.w-node-d46d82c1-40f2-314f-f684-5074ad84380e-ad843808, #w-node-d46d82c1-40f2-314f-f684-5074ad843810-ad843808, #Email-6.w-node-d46d82c1-40f2-314f-f684-5074ad843812-ad843808, #w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808, #Phone-Nr.w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808, #w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808, #Message-2.w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808, #w-node-_42e47e49-494b-4774-2667-2c2c829786c2-a9bfea53 {
   grid-area: span 1 / span 2 / span 1 / span 2;
 }
 
