--- a/css/kunu-studio-a077d9.css
+++ b/css/kunu-studio-a077d9.css
@@ -6265,7 +6265,7 @@ figure {
 
 .btn-wrap {
   z-index: 50;
-  display: block;
+  display: none;
   position: relative;
 }
 
@@ -12449,7 +12449,7 @@ figure {
   font-weight: 500;
   line-height: 1.2em;
   transition: all .45s;
-  display: flex;
+  display: none;
 }
 
 .secondary-black-button:hover {
@@ -17790,6 +17790,10 @@ figure {
 }
 
 @media screen and (max-width: 479px) {
+  h1 {
+    font-size: 36px;
+  }
+
   .grid-system-wrapper {
     flex-direction: row;
   }
@@ -18178,6 +18182,11 @@ figure {
     display: flex;
   }
 
+  .footer-items-2 {
+    justify-content: center;
+    align-items: center;
+  }
+
   .footer-items-2.last {
     flex-flow: column;
     justify-content: space-between;
@@ -18194,7 +18203,16 @@ figure {
     display: flex;
   }
 
-  .no-shrink-footer, .footer-description, .footer-list-2.last-list, .footer-right-form {
+  .no-shrink-footer, .footer-description {
+    width: 100%;
+  }
+
+  .footer-list-2 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .footer-list-2.last-list, .footer-right-form {
     width: 100%;
   }
 
@@ -18503,6 +18521,14 @@ figure {
 
   .circle-wrap {
     padding: 40px;
+  }
+
+  ._404-title.text-white-2 {
+    font-size: 35px;
+  }
+
+  .error-404-text.text-white {
+    font-size: 25px;
   }
 
   .loop-container {
@@ -18886,6 +18912,15 @@ figure {
     grid-template-columns: 1fr;
   }
 
+  .contact-us-link.mobile {
+    display: none;
+  }
+
+  .contact-us-link.button-mobile {
+    border-color: var(--light-black);
+    border-radius: 90px;
+  }
+
   .gallery-image-portfolio-details {
     height: 200px;
   }
@@ -18943,12 +18978,24 @@ figure {
     width: 100%;
   }
 
+  .team-intro-card---right.text-right {
+    text-align: left;
+  }
+
   .form-bg---contact {
     padding: 15px 0;
   }
 
   .grid_classes {
     grid-template-areas: ".";
+  }
+
+  .div-block {
+    grid-template-columns: 1fr;
+  }
+
+  .secondary-black-button {
+    display: block;
   }
 
   .teacher-card {
@@ -18961,6 +19008,10 @@ figure {
 
   .div-block-2 {
     grid-template-rows: auto;
+  }
+
+  .text-align-right {
+    text-align: left;
   }
 }
 
@@ -21102,10 +21153,6 @@ figure {
   align-self: stretch;
 }
 
-#w-node-_3132d2c4-2864-35e1-8521-e455126e8149-2940d900 {
-  grid-area: span 1 / span 1 / span 1 / span 1;
-}
-
 #w-node-_50469bd2-8ee1-a5d5-eb62-0473a785374d-2940d900 {
   grid-area: 1 / 1 / 2 / 2;
 }
@@ -21120,6 +21167,10 @@ figure {
 
 #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e643-2940d900 {
   grid-area: 1 / 3 / 2 / 4;
+}
+
+#w-node-_194ef073-fb15-6b66-1979-166b472ccfbf-472ccfbb {
+  grid-area: span 1 / span 1 / span 1 / span 1;
 }
 
 #w-node-dd16905c-b544-cd5e-d067-7ec9112f5668-a311e372 {
@@ -22591,7 +22642,7 @@ figure {
     grid-column: 1 / 4;
   }
 
-  #w-node-_3132d2c4-2864-35e1-8521-e455126e8146-2940d900, #w-node-_395e13c4-8d1f-d6a1-a127-bc31879a776b-9aefa426 {
+  #w-node-_194ef073-fb15-6b66-1979-166b472ccfbc-472ccfbb, #w-node-_395e13c4-8d1f-d6a1-a127-bc31879a776b-9aefa426 {
     justify-self: center;
   }
 
@@ -22657,6 +22708,10 @@ figure {
 }
 
 @media screen and (max-width: 479px) {
+  #w-node-f5ec54a1-f6e3-8aef-6023-51471421072e-431bdb82 {
+    grid-column-start: 1;
+  }
+
   #w-node-ecd6bd8b-ab1f-6ae4-ff68-847b890b041e-431bdb89, #w-node-ecd6bd8b-ab1f-6ae4-ff68-847b890b0420-431bdb89 {
     justify-self: center;
   }
@@ -22706,8 +22761,20 @@ figure {
     grid-area: 3 / 1 / 5 / 3;
   }
 
+  #w-node-ec58ce0c-c875-a5c6-3445-70d51bd5f4a8-431bdbab {
+    grid-column-end: 4;
+  }
+
+  #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-431bdbad {
+    grid-column-start: 1;
+  }
+
   #First-name.w-node-_42e47e49-494b-4774-2667-2c2c829786c4-a9bfea53, #Last-name.w-node-_42e47e49-494b-4774-2667-2c2c829786c5-a9bfea53, #First-name.w-node-c1dd48db-009b-e449-7882-c0691c6f6730-637fd4ab, #Last-name.w-node-c1dd48db-009b-e449-7882-c0691c6f6731-637fd4ab {
     grid-area: span 1 / span 2 / span 1 / span 2;
+  }
+
+  #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-2940d900, #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-9e488981, #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-17f81b76, #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-7f6c0446 {
+    grid-column-start: 1;
   }
 }
 
