--- a/css/kunu-studio-a077d9.css
+++ b/css/kunu-studio-a077d9.css
@@ -21955,6 +21955,150 @@ figure {
   grid-area: 1 / 3 / 2 / 4;
 }
 
+#w-node-_0c1d3287-53ef-c0ec-dadb-07def4950c43-b683340d {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-_0c1d3287-53ef-c0ec-dadb-07def4950c44-b683340d {
+  place-self: center;
+}
+
+#w-node-_6d440bb5-f80e-24b2-a4a1-3a94db33a42e-b683340d {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-_0c1d3287-53ef-c0ec-dadb-07def4950c51-b683340d {
+  justify-self: center;
+}
+
+#w-node-ef2f4d36-3bbc-8934-4ec5-9c3ea1b6d73d-b683340d {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-_0bb4a2ac-d175-b12a-8dc0-690575f50cc5-b683340d {
+  align-self: start;
+}
+
+#w-node-d3efcf10-a803-3748-8fda-dd12334d3b5c-b683340d {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-_0bb4a2ac-d175-b12a-8dc0-690575f50ccd-b683340d {
+  align-self: start;
+}
+
+#w-node-d2b5362e-6be7-ec8d-bf36-28d2d5485bfe-b683340d {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-_0bb4a2ac-d175-b12a-8dc0-690575f50cd2-b683340d {
+  align-self: start;
+}
+
+#w-node-d9e69948-45a0-40f3-5f3c-961689c3173d-b683340d {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-ef2f4d36-3bbc-8934-4ec5-9c3ea1b6d75f-b683340d {
+  grid-area: 1 / 3 / 2 / 4;
+}
+
+#w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081651-b683340d {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081657-b683340d {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+#w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081666-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08166e-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d0816a6-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d0816ae-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d0816c6-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d0816ce-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d0816e6-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d0816ee-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08170b-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081713-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08174b-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081753-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08176b-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081773-b683340d {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08177c-b683340d {
+  grid-area: 1 / 3 / 2 / 4;
+}
+
+#w-node-_89f17f28-970d-724b-de30-ae4c69afeda2-b683340d {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-_89f17f28-970d-724b-de30-ae4c69afeecd-b683340d {
+  grid-area: 1 / 3 / 2 / 4;
+}
+
+#w-node-_0c1d3287-53ef-c0ec-dadb-07def4950c43-1a5f2843 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-_0c1d3287-53ef-c0ec-dadb-07def4950c44-1a5f2843 {
+  place-self: center;
+}
+
+#w-node-_6d440bb5-f80e-24b2-a4a1-3a94db33a42e-1a5f2843 {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-_0c1d3287-53ef-c0ec-dadb-07def4950c51-1a5f2843 {
+  justify-self: center;
+}
+
+#w-node-ef2f4d36-3bbc-8934-4ec5-9c3ea1b6d73d-1a5f2843 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-_0bb4a2ac-d175-b12a-8dc0-690575f50cc5-1a5f2843 {
+  align-self: start;
+}
+
+#w-node-d3efcf10-a803-3748-8fda-dd12334d3b5c-1a5f2843 {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-_0bb4a2ac-d175-b12a-8dc0-690575f50ccd-1a5f2843 {
+  align-self: start;
+}
+
+#w-node-d2b5362e-6be7-ec8d-bf36-28d2d5485bfe-1a5f2843 {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-_0bb4a2ac-d175-b12a-8dc0-690575f50cd2-1a5f2843 {
+  align-self: start;
+}
+
+#w-node-d9e69948-45a0-40f3-5f3c-961689c3173d-1a5f2843 {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-ef2f4d36-3bbc-8934-4ec5-9c3ea1b6d75f-1a5f2843 {
+  grid-area: 1 / 3 / 2 / 4;
+}
+
+#w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081651-1a5f2843 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081657-1a5f2843 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+#w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081666-1a5f2843, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08166e-1a5f2843, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081686-1a5f2843, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08168e-1a5f2843, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d0816a6-1a5f2843, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d0816ae-1a5f2843, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08172b-1a5f2843, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081733-1a5f2843, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08176b-1a5f2843, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081773-1a5f2843 {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08177c-1a5f2843 {
+  grid-area: 1 / 3 / 2 / 4;
+}
+
+#w-node-_89f17f28-970d-724b-de30-ae4c69afeda2-1a5f2843 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-_89f17f28-970d-724b-de30-ae4c69afeecd-1a5f2843 {
+  grid-area: 1 / 3 / 2 / 4;
+}
+
 @media screen and (min-width: 1920px) {
   #w-node-f591e5bd-49f7-bfe0-1903-d058fe76517a-431bdb87, #w-node-_9935dd31-2c6d-162f-b8ea-5510b9367e3b-431bdb89, #w-node-_3506db66-b63d-ed4e-7bcd-1957b9658bc9-431bdb89, #w-node-_37ea3766-19f1-6d5c-1978-522d0f0f81f3-431bdb8b, #w-node-df30a107-eb37-ea50-47d9-6c032d32c15d-431bdb8c, #w-node-_4905a87f-b2e5-2944-786e-1b41a6b4b692-431bdba1, #w-node-e8e8d7bb-cf95-f8a9-d167-6a80aa4e814e-431bdba6, #w-node-_0f08821d-a70b-9408-602c-30f09bbff7b2-431bdbaa, #w-node-_3b81bc0c-ab95-25b7-4a75-afb935309320-431bdbb1, #w-node-_796d92aa-f8a7-0728-fa28-252c6cf4368c-2d2ea13c, #w-node-_796d92aa-f8a7-0728-fa28-252c6cf4368c-9aefa426, #w-node-_796d92aa-f8a7-0728-fa28-252c6cf4368c-28b238cf, #w-node-_796d92aa-f8a7-0728-fa28-252c6cf4368c-09e816a7, #w-node-_796d92aa-f8a7-0728-fa28-252c6cf4368c-7f064163, #w-node-_796d92aa-f8a7-0728-fa28-252c6cf4368c-e522c2f1, #w-node-_796d92aa-f8a7-0728-fa28-252c6cf4368c-48d80118, #w-node-_796d92aa-f8a7-0728-fa28-252c6cf4368c-7f78cf5d, #w-node-_796d92aa-f8a7-0728-fa28-252c6cf4368c-b37480be {
     grid-area: 1 / 2 / 2 / 3;
@@ -22541,7 +22685,7 @@ figure {
     justify-self: center;
   }
 
-  #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e643-7f6c0446 {
+  #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e643-7f6c0446, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08177c-b683340d, #w-node-_89f17f28-970d-724b-de30-ae4c69afeecd-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08177c-1a5f2843, #w-node-_89f17f28-970d-724b-de30-ae4c69afeecd-1a5f2843 {
     grid-area: 1 / 3 / 2 / 4;
   }
 }
@@ -22713,6 +22857,10 @@ figure {
   #w-node-_796d92aa-f8a7-0728-fa28-252c6cf437da-b37480be {
     grid-column: 1 / 4;
   }
+
+  #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081657-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081657-1a5f2843 {
+    grid-area: span 1 / span 1 / span 1 / span 1;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -22781,7 +22929,7 @@ figure {
     grid-area: span 1 / span 2 / span 1 / span 2;
   }
 
-  #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-2940d900, #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-9e488981, #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-17f81b76, #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-7f6c0446 {
+  #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-2940d900, #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-9e488981, #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-17f81b76, #w-node-cd4e4f89-65dd-27f3-08fa-c0cebe88e553-7f6c0446, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081651-b683340d, #w-node-_89f17f28-970d-724b-de30-ae4c69afeda2-b683340d, #w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081651-1a5f2843, #w-node-_89f17f28-970d-724b-de30-ae4c69afeda2-1a5f2843 {
     grid-column-start: 1;
   }
 }
